<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="action_reload">Reload</string>
    <string name="action_menu">More</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_duplicate_tab">Duplicate tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_forward">Forward</string>
    <string name="action_sessions">Sessions</string>
    <string name="action_new_session">New session</string>
    <string name="action_save_session">Save session as</string>
    <string name="action_edit_sessions">Edit sessions</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="location">Location access</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User agent</string>
    <string name="home">Homepage</string>
    <string name="download">Download location</string>
    <string name="settings_advanced">Advanced</string>
    <string name="version">Application version</string>
    <string name="update_available">Update available</string>
    <string name="update_check_error">Update check error, try again later</string>
    <string name="up_to_date">This is the newest version</string>
    <string name="show">Show</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="load_images">Load images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable cookies</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search engine</string>
    <string name="search_hint">Search</string>
    <string name="search_action">@string/search_hint</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore_tabs_on_startup">Restore tabs on startup</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history">Clear browser history</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank page</string>
    <string name="agent_android_mobile">Android (Mobile)</string>
    <string name="agent_custom">Custom</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_ios_mobile">iOS (Mobile)</string>
    <string name="agent_linux_desktop">Linux (Desktop)</string>
    <string name="agent_macos_desktop">macOS (Desktop)</string>
    <string name="agent_system">System</string>
    <string name="agent_web_view">WebView</string>
    <string name="agent_windows_desktop">Windows (Desktop)</string>
    <string name="agent_hide_device">Hide device</string>
    <string name="title_search_engine">Search engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file? (%1$s)</string>
    <string name="unknown_size">Unknown size</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="title_user_agent">User agent</string>
    <string name="title_download_location">Download location</string>
    <string name="title_custom_homepage">Custom homepage</string>
    <string name="action_webpage">Web page</string>
    <string name="action_main_menu">Main menu</string>
    <string name="title_clear_history">Clear history</string>
    <string name="title_clear_cookies">Clear cookies</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ask">Ask</string>
    <string name="layer_type_none">None</string>
    <string name="layer_type_software">Software - WebGL off</string>
    <string name="layer_type_hardware">Hardware - WebGL on</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_abort">Abort</string>
    <string name="title_text_size">Text size</string>
    <string name="title_error">Error</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">Go incognito</string>
    <string name="action_show_homepage">Show homepage</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in page</string>
    <string name="action_find_next">Find next</string>
    <string name="action_find_previous">Find previous</string>
    <string name="action_find_selection">Find selection</string>
    <string name="action_print">Print</string>
    <string name="action_translate">Translate</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_notification_description">Triggers upon download completion</string>
    <string name="download_pending">Downloading:</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch \'Turn Off USB Storage\' in the notification.</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
    <string name="incognito_cookies">Enable cookies in incognito mode</string>
    <string name="incognito_cookies_pie">Incognito mode runs in a separate process that is reset after each session. Incognito cookie preferences are now controlled by the regular cookie preferences.</string>
    <string name="pref_title_contact_us">Contact us</string>
    <string name="clear_cache">Clear cache</string>
    <string name="message_cache_cleared">Cache cleared</string>
    <string name="message_import">Bookmarks were imported</string>
    <string name="message_clear_history">History cleared</string>
    <string name="message_cookies_cleared">Cookies cleared</string>
    <string name="message_cookies_clear_error">Could not clear cookies</string>
    <string name="max_tabs">Max tabs reached. Open more by seeing an ads.</string>
    <string name="message_cookie_copied">Cookie copied to clipboard</string>
    <string name="message_text_copied">Text copied to clipboard</string>
    <string name="message_link_copied">Link copied to clipboard</string>
    <string name="message_blocked_local">Local file has been blocked from loading</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="suggestion">Search for</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="title_updated">Prime Browser was updated</string>
    <string name="message_updated">You are now running v%s. Do you want to check release notes online?</string>
    <string name="title_welcome">Welcome to Prime Browser</string>
    <string name="message_welcome">Visit our home page to find out more about this powerful web browser?</string>
    <string name="block_ads">Content control</string>
    <string name="block_remote_frequency_daily">Daily</string>
    <string name="block_remote_frequency_weekly">Weekly</string>
    <string name="block_remote_frequency_monthly">Monthly</string>
    <string name="page_blocked">The following page was blocked:</string>
    <string name="page_blocked_reason">because of:</string>
    <string name="page_blocked_list_ad">%s on ad filters</string>
    <string name="page_blocked_list_user">%s blocked by user rule</string>
    <string name="page_blocked_list_malware">%s on malware filters</string>
    <string name="request_blocked">Request blocked</string>
    <string name="blocklist_update_mode">Auto-update mode</string>
    <string name="blocklist_update_on">Auto-update on</string>
    <string name="blocklist_update_off">Auto-update off</string>
    <string name="blocklist_update_wifi">Only on non-metered connections</string>
    <string name="blocklist_update">Update filters</string>
    <string name="blocklist_update_frequency">Auto-update frequency</string>
    <string name="blocklist_update_description">Updates will be done with the chosen frequency, unless the filters file specifies a longer interval</string>
    <string name="blocklist_update_now">Update lists now</string>
    <string name="blocklist_last_update">Last update: %s</string>
    <string name="blocklist_updating">Updating…</string>
    <string name="blocklist_update_error">Error while updating filters list %s</string>
    <string name="blocklist_update_error_code">Error while updating filters list %1$s: status code %2$s</string>
    <string name="add_blocklist">Add filters file</string>
    <string name="add_blocklist_hint">You can choose hosts lists or any list compatible with AdBlockPlus rules</string>
    <string name="invalid_title">Invalid title</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="blocklist_remove">Remove filters file</string>
    <string name="blocklist_remove_confirm">Really remove filters file %s?</string>
    <string name="local_file">Local</string>
    <string name="local_file_replace">Replace</string>
    <string name="local_file_chosen">file selected</string>
    <string name="remote_file">Remote</string>
    <string name="use_modify_filters">Modifier filters</string>
    <string name="use_modify_filters_warning">In some cases, modifier filters have been found to break websites in this browser. Until implementation is improved, you can enable them at your own risk. Disabling for main-frame documents only avoids most issues.</string>
    <string name="modify_filters_not_for_main_frame">Disable for main frame only</string>
    <string name="action_message_canceled">Action canceled.</string>
    <string name="message_ssl_error_aborted">Security error! Page loading aborted.</string>
    <string name="settings_general">General</string>
    <string name="settings_display">Look &amp; feel</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_about">About</string>
    <string name="settings_adblock">@string/block_ads</string>
    <string name="settings_summary_content_control">Ad blocker and content filtering</string>
    <string name="faq">FAQ</string>
    <string name="faq_description">Frequently asked questions</string>
    <string name="debug_title">Debug</string>
    <string name="settings_title_domains">Domains</string>
    <string name="settings_summary_domains">Manage domain settings</string>
</resources>