<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Preference
        app:fragment="theprime.settings.fragment.GeneralSettingsFragment"
        app:title="@string/settings_general"
        app:icon="@drawable/ic_settings"
        app:singleLineTitle="false"
        />

    <Preference
        app:fragment="theprime.settings.fragment.DisplaySettingsFragment"
        app:title="@string/settings_display"
        app:icon="@drawable/ic_palette"
        app:singleLineTitle="false"
        />
    
    <Preference
        app:fragment="theprime.settings.fragment.AdBlockSettingsFragment"
        app:title="@string/settings_adblock"
        app:summary="@string/settings_summary_content_control"
        app:icon="@drawable/ic_block"
        app:singleLineTitle="false"
        />

    <Preference
        app:fragment="theprime.settings.fragment.PrivacySettingsFragment"
        app:title="@string/settings_privacy"
        app:icon="@drawable/ic_security"
        app:singleLineTitle="false"
        />

    <Preference
        app:fragment="theprime.settings.fragment.BackupSettingsFragment"
        app:title="@string/settings_backup"
        app:icon="@drawable/ic_cloud_upload"
        app:singleLineTitle="false"
        />

    <!-- Advanced settings are now empty, remove them at some point -->
    <Preference
        app:fragment="theprime.settings.fragment.AdvancedSettingsFragment"
        app:isPreferenceVisible="false"
        app:title="@string/settings_advanced"
        app:singleLineTitle="false"
        />
    <!-- Just hide Lightning FAQ for now -->
    <Preference
        app:summary="@string/faq_description"
        app:isPreferenceVisible="false"
        app:title="@string/faq"
        app:singleLineTitle="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://acrdevelopment.org/lightning/faq">
        </intent>
    </Preference>

    <Preference
        app:fragment="theprime.settings.fragment.DomainsSettingsFragment"
        app:summary="@string/settings_summary_domains"
        app:title="@string/settings_title_domains"
        app:icon="@drawable/ic_domain"
        app:singleLineTitle="false"
        />

    <Preference
        app:fragment="theprime.settings.fragment.DebugSettingsFragment"
        app:key="@string/pref_key_debug"
        app:title="@string/debug_title"
        app:icon="@drawable/ic_bug"
        app:singleLineTitle="false"
        />


    <!-- About is traditionally last -->
    <Preference
        app:fragment="theprime.settings.fragment.AboutSettingsFragment"
        app:title="@string/settings_about"
        app:icon="@drawable/ic_about"
        app:singleLineTitle="false"
        />

</PreferenceScreen>


